<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify streamer</string>
    <string name="scores_app">Scores app</string>
    <string name="library_app">Library app</string>
    <string name="build_it_bigger">Build it bigger</string>
    <string name="xyz_reader">XYZ reader</string>
    <string name="capstone">Capstone: My own App</string>
    <string name="btn_action_message">This button will launch my %s !</string>
    <string name="my_capstone_app">capstone app</string>
    <string name="my_spotify_streamer_app">Spotify streamer app</string>
    <string name="my_xyz_reader_app">XYZ Reader app</string>
    <string name="my_build_it_bigger_app">Build it bigger app</string>
</resources>
