<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/my_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/title"
        android:textSize="@dimen/activity_header_text" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/activity_btn_height"
        android:layout_alignEnd="@+id/my_title"
        android:layout_alignLeft="@+id/my_title"
        android:layout_alignRight="@+id/my_title"
        android:layout_alignStart="@+id/my_title"
        android:layout_below="@+id/my_title"
        android:layout_marginTop="38dp"
        android:background="@color/colorOrange"
        android:text="@string/spotify_streamer"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/activity_btn_height"
        android:layout_alignEnd="@+id/button1"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_alignStart="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="@dimen/activity_btn_spaces"
        android:background="@color/colorOrange"
        android:text="@string/scores_app"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/activity_btn_height"
        android:layout_alignEnd="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="@dimen/activity_btn_spaces"
        android:background="@color/colorOrange"
        android:text="@string/library_app"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/activity_btn_height"
        android:layout_alignEnd="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignRight="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_below="@+id/button3"
        android:layout_marginTop="@dimen/activity_btn_spaces"
        android:background="@color/colorOrange"
        android:text="@string/build_it_bigger"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/activity_btn_height"
        android:layout_alignEnd="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignRight="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_below="@+id/button4"
        android:layout_marginTop="@dimen/activity_btn_spaces"
        android:background="@color/colorOrange"
        android:text="@string/xyz_reader"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/activity_btn_height"
        android:layout_alignEnd="@+id/button5"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignRight="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:layout_below="@+id/button5"
        android:layout_marginTop="@dimen/activity_btn_spaces"
        android:background="@color/colorRed"
        android:text="@string/capstone"
        android:textAllCaps="true" />
</RelativeLayout>
